--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="simplelink">
+  <meta name="title" content="simplelink - simple url shortener without database">
 <meta name="description" content="PHP URL shortener with only 2 files and without database">
-<meta name="keywords" content="simplelink,url shortener,url-shortener,urlshortener,link shortener,link-shortener,linkshortener,short link,short-link,shortlink,bit.ly,short url,short-url,shorturl,php,php url shortener,php-url-shortener,phpurlshortener,johnny-choo/simplelink">
+<meta name="keywords" content="simplelink,url shortener without database,simple url shortener,url shortener,url-shortener,urlshortener,link shortener,link-shortener,linkshortener,short link,short-link,shortlink,bit.ly,short url,short-url,shorturl,php,php url shortener,php-url-shortener,phpurlshortener,johnny-choo/simplelink">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="English">
+<meta name="language" content="en">
   <link rel="stylesheet" href="style.css" />
   <title>simplelink</title>
 </head>
