--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="en">
   <link rel="stylesheet" href="style.css" />
-  <title>simplelink</title>
+  <title>simplelink - simple url shortener without database</title>
 </head>
 
 <body class="stackedit">
