--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="simplelink - simple url shortener without database">
-<meta name="description" content="PHP URL shortener with only 2 files and without database">
-<meta name="keywords" content="simplelink,url shortener without database,simple url shortener,url shortener,url-shortener,urlshortener,link shortener,link-shortener,linkshortener,short link,short-link,shortlink,bit.ly,short url,short-url,shorturl,php,php url shortener,php-url-shortener,phpurlshortener,johnny-choo/simplelink">
-<meta name="robots" content="index, follow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="en">
+  <title>readme.md</title>
   <link rel="stylesheet" href="style.css" />
-  <title>simplelink - simple url shortener without database</title>
 </head>
 
 <body class="stackedit">
   <div class="stackedit__html"><!-- simplelink -->
 <p><img src="simplelink.png" alt="simplelink"></p>
-<h1 id="simplelink">simplelink</h1>
-<p>PHP URL shortener with only 2 files and without database</p>
+<h1 id="simplelink">Simplelink</h1>
+<p>PHP URL shortener with only 1 file and without database</p>
+<p>Another version - HTML and PHP files seperated for better page loading time</p>
 <!-- GETTING STARTED -->
-<h2 id="getting-started">Getting Started</h2>
+<h1 id="getting-started">Getting Started</h1>
 <h3 id="installation">Installation</h3>
 <ol>
 <li>
-<p>Download the code</p>
+<p>Download the code from <a href="https://github.com/johnny-choo/simplelink/releases/">here</a></p>
 </li>
 <li>
 <p>Upload the files to your root folder</p>
@@ -58,6 +53,11 @@
 <li>
 <p>Open a Pull Request</p>
 </li>
+</ol>
+<!-- CONTRIBUTION -->
+<h2 id="contribution-made">Contribution Made</h2>
+<ol>
+<li>External CSS - <a href="https://github.com/johnny-choo/simplelink/tree/external-css">https://github.com/johnny-choo/simplelink/tree/external-css</a></li>
 </ol>
 <!-- LICENSE -->
 <h2 id="license">License</h2>
