--- a/index.html
+++ b/index.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>readme.md</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body class="stackedit">
-  <div class="stackedit__html"><!-- simplelink -->
-<p><img src="simplelink.png" alt="simplelink"></p>
-<h1 id="simplelink">Simplelink</h1>
-<p>PHP URL shortener with only 1 file and without database</p>
-<p>Another version - HTML and PHP files seperated for better page loading time</p>
-<!-- GETTING STARTED -->
-<h1 id="getting-started">Getting Started</h1>
-<h3 id="installation">Installation</h3>
-<ol>
-<li>
-<p>Download the code from <a href="https://github.com/johnny-choo/simplelink/releases/">here</a></p>
-</li>
-<li>
-<p>Upload the files to your root folder</p>
-</li>
-<li>
-<p>Ta-da your url shortener website is now ready</p>
-</li>
-</ol>
-<!-- DEMO -->
-<h2 id="demo">Demo</h2>
-<p><a href="https://johnnychoo.000webhostapp.com">https://johnnychoo.000webhostapp.com</a></p>
-<!-- SUPPORT -->
-<h2 id="support">Support</h2>
-<p>Support me by starring my project</p>
-<!-- CONTRIBUTING -->
-<h2 id="contributing">Contributing</h2>
-<p>Contributions are what make the open source community such an amazing place to be learn, inspire, and create. Any contributions you make are <strong>greatly appreciated</strong>.</p>
-<ol>
-<li>
-<p>Fork the Project</p>
-</li>
-<li>
-<p>Create your Feature Branch (<code>git checkout -b feature/AmazingFeature</code>)</p>
-</li>
-<li>
-<p>Commit your Changes (<code>git commit -m 'Add some AmazingFeature'</code>)</p>
-</li>
-<li>
-<p>Push to the Branch (<code>git push origin feature/AmazingFeature</code>)</p>
-</li>
-<li>
-<p>Open a Pull Request</p>
-</li>
-</ol>
-<!-- CONTRIBUTION -->
-<h2 id="contribution-made">Contribution Made</h2>
-<ol>
-<li>External CSS - <a href="https://github.com/johnny-choo/simplelink/tree/external-css">https://github.com/johnny-choo/simplelink/tree/external-css</a></li>
-</ol>
-<!-- LICENSE -->
-<h2 id="license">License</h2>
-<p>Distributed under the MIT License. See <code>LICENSE</code> for more information.</p>
-<!-- CONTACT -->
-<h2 id="contact">Contact</h2>
-<p>Email - <a href="mailto:choo21617@gmail.com">choo21617@gmail.com</a></p>
-<p>Project Link: <a href="https://github.com/johnny-choo/simplelink">https://github.com/johnny-choo/simplelink</a></p>
-</div>
-</body>
-
-</html>
+<!DOCTYPE html><html><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta name="title" content="simplelink - simple url shortener without database"><meta name="description" content="PHP URL shortener with only 2 files and without database"><meta name="keywords" content="simplelink,url shortener without database,simple url shortener,url shortener,url-shortener,urlshortener,link shortener,link-shortener,linkshortener,short link,short-link,shortlink,bit.ly,short url,short-url,shorturl,php,php url shortener,php-url-shortener,phpurlshortener,johnny-choo/simplelink"><meta name="robots" content="index, follow"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="language" content="en"> <link rel="stylesheet" href="style.css"/> <title>simplelink - simple url shortener without database</title></head><body class="stackedit"> <div class="stackedit__html"><p><img src="simplelink.png" alt="simplelink"></p><h1 id="simplelink">Simplelink</h1><p>PHP URL shortener with only 1 file and without database</p><p>Another version - HTML and PHP files seperated for better page loading time</p><h1 id="getting-started">Getting Started</h1><h3 id="installation">Installation</h3><ol><li><p>Download the code from <a href="https://github.com/johnny-choo/simplelink/releases/">here</a></p></li><li><p>Upload the files to your root folder</p></li><li><p>Ta-da your url shortener website is now ready</p></li></ol><h2 id="demo">Demo</h2><p><a href="https://johnnychoo.000webhostapp.com">https://johnnychoo.000webhostapp.com</a></p><h2 id="support">Support</h2><p>Support me by starring my project</p><h2 id="contributing">Contributing</h2><p>Contributions are what make the open source community such an amazing place to be learn, inspire, and create. Any contributions you make are <strong>greatly appreciated</strong>.</p><ol><li><p>Fork the Project</p></li><li><p>Create your Feature Branch (<code>git checkout -b feature/AmazingFeature</code>)</p></li><li><p>Commit your Changes (<code>git commit -m 'Add some AmazingFeature'</code>)</p></li><li><p>Push to the Branch (<code>git push origin feature/AmazingFeature</code>)</p></li><li><p>Open a Pull Request</p></li></ol><h2 id="contribution-made">Contribution Made</h2><ol><li>External CSS - <a href="https://github.com/johnny-choo/simplelink/tree/external-css">https://github.com/johnny-choo/simplelink/tree/external-css</a></li></ol><h2 id="license">License</h2><p>Distributed under the MIT License. See <code>LICENSE</code> for more information.</p><h2 id="contact">Contact</h2><p>Email - <a href="mailto:choo21617@gmail.com">choo21617@gmail.com</a></p><p>Project Link: <a href="https://github.com/johnny-choo/simplelink">https://github.com/johnny-choo/simplelink</a></p></div></body></html>
